Update Gradle and Build tools versions, and modify Details AppBar Appearance
- Update gradle and build configuration
- Modify the existing appearance of the Collapsing Toolbar which was not right

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="@color/window_background"
+            app:contentScrim="@color/color_primary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
