Implement Custom Night Mode
Final changes to add a Night mode...implements the material colors correctly throughout the app, implement the additional night mode color resources, cleanup all old unused colors, and finally adjust vectors to use a material style color.

--- a/app/src/main/res/color/fab_selector.xml
+++ b/app/src/main/res/color/fab_selector.xml
@@ -4,5 +4,5 @@
     <item android:color="@color/grey_300" android:state_focused="true"/>
     <item android:color="@color/grey_300" android:state_selected="true"/>
     <item android:color="@color/grey_300" android:state_enabled="false"/>
-    <item android:color="@color/color_accent"/>
+    <item android:color="?attr/colorSecondary"/>
 </selector>
