--- a/app/src/main/res/drawable-v21/bg_bottom_divider_sel.xml
+++ b/app/src/main/res/drawable-v21/bg_bottom_divider_sel.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/color_accent">
+    android:color="?attr/colorSecondary">
     <item android:id="@android:id/mask">
-        <color android:color="@color/card_background"/>
+        <color android:color="?attr/colorSurface"/>
     </item>
-    <item android:drawable="@color/window_background" />
+    <item android:drawable="?attr/colorSurface" />
 </ripple>
