--- a/app/src/main/res/drawable/bg_button.xml
+++ b/app/src/main/res/drawable/bg_button.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/color_accent" />
+    <solid android:color="?attr/colorSecondary" />
     <corners android:topRightRadius="@dimen/card_corner_rad"  android:topLeftRadius="@dimen/card_corner_rad"/>
 </shape>
