--- a/app/src/main/res/drawable/bg_splash.xml
+++ b/app/src/main/res/drawable/bg_splash.xml
@@ -1,6 +1,6 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
-    <item android:drawable="@color/grey_100"/>
+    <item android:drawable="?attr/colorSurface"/>
     <item
         android:drawable="@drawable/vct_vikingdroid"
         android:gravity="center">
