--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"
-                app:tabIndicatorColor="@color/white_bluetint"
+                app:tabIndicatorColor="?attr/colorOnPrimary"
                 app:tabIndicatorHeight="3dp"
                 app:tabSelectedTextColor="@color/grey_300"
-                app:tabTextColor="@color/white_bluetint" />
+                app:tabTextColor="?attr/colorOnPrimary" />
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/product_viewpager"
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_gravity="bottom"
-            app:backgroundTint="@color/color_primary"
+            app:backgroundTint="?attr/colorPrimary"
             app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
             app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
