--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-<!--    <style name="Base.Theme.DesignDemo" parent="Theme.MaterialComponents.DayNight.NoActionBar">-->
-        <style name="Base.Theme.DesignDemo" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <!--
+     <item name="android:forceDarkAllowed">true</item>
+     <style name="Base.Theme.DesignDemo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+     -->
+    <style name="Base.Theme.DesignDemo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
         <item name="colorPrimary">@color/color_primary</item>
-        <item name="colorPrimaryVariant">@color/color_primary_variant</item>
-        <item name="colorOnPrimary">#000000</item>
-        <item name="colorSecondary">@color/color_accent</item>
-        <item name="colorSecondaryVariant">#2bbd7e</item>
-        <item name="colorOnSecondary">#000000</item>
+        <item name="colorPrimaryDark">@color/color_primary_variant</item>
+        <item name="colorOnPrimary">@color/color_on_primary</item>
+
+        <item name="colorSecondary">@color/color_secondary</item>
+        <item name="colorSecondaryVariant">@color/color_secondary_variant</item>
+        <item name="colorOnSecondary">@color/color_on_secondary</item>
+
+        <item name="colorSurface">@color/color_surface</item>
+        <item name="colorOnSurface">@color/color_on_surface</item>
+
         <item name="colorError">@color/color_error</item>
         <item name="colorOnError">#ffffff</item>
-        <item name="colorSurface">@color/color_surface</item>
-        <item name="colorPrimaryDark">@color/color_primary_variant</item>
-        <item name="colorAccent">@color/color_accent</item>
-        <item name="android:windowBackground">@color/window_background</item>
+
         <item name="textAppearanceHeadline6">@style/TextAppearance.MyApp.Headline6</item>
         <item name="textAppearanceHeadline5">@style/TextAppearance.MyApp.Headline5</item>
         <item name="textAppearanceHeadline1">@style/TextAppearance.MyApp.Headline1</item>
