--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-
-    <style name="Base.Theme.DesignDemo" parent="Theme.MaterialComponents.Light.NoActionBar">
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="Base.Theme.DesignDemo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -18,22 +17,6 @@
     <style name="Base.Theme.DesignDemo.Launcher">
         <item name="android:windowBackground">@drawable/bg_splash</item>
     </style>
-
-    <!-- Coming Soon -->
-    <!--<item name="colorSecondary">@color/color_secondary</item>-->
-    <!--<item name="colorSecondaryDark">@color/color_secondary_dark</item>-->
-    <!--<item name="colorSecondaryLight">@color/colors_secondary_light</item>-->
-
-    <!--<item name="colorPrimaryVariant">@color/green_600</item>-->
-    <!--<item name="colorSecondaryVariant">@color/green_600</item>-->
-    <!--<item name="colorBackground">@color/green_600</item>-->
-    <!--<item name="colorError">@color/green_600</item>-->
-    <!--<item name="colorSurface">@color/green_600</item>-->
-    <!--<item name="colorOnPrimary">@color/green_600</item>-->
-    <!--<item name="colorOnSecondary">@color/green_600</item>-->
-    <!--<item name="colorOnBackground">@color/green_600</item>-->
-    <!--<item name="colorOnError">@color/green_600</item>-->
-    <!--<item name="colorOnSurface">@color/green_600</item>-->
 
 
     <!--Create custom style for a Component, that will be applied manually-->
